--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-KERNEL_SOURCE=https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne
-KERNEL_SOURCE_BRANCH=TDA
-KERNEL_DEFCONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_sm7250
+KERNEL_SOURCE_BRANCH=13.0
+KERNEL_DEFCONFIG=vendor/picasso_user_defconfig
 KERNEL_FILE=Image.gz-dtb
 TARGET_ARCH=arm64
 
@@ -22,12 +22,12 @@ DISABLE-LTO=false
 # KernelSU flags
 USE_KERNELSU=true
 KERNELSU_TAG=main
-USE_KPROBES=false
+USE_KPROBES=true
 USE_OVERLAYFS=false
 
 # DTBO image
-NEED_DTBO=false
+NEED_DTBO=true
 
 # Build boot images
-MAKE_BOOT_IMAGE=true
+MAKE_BOOT_IMAGE=false
 SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
