--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -146,6 +146,7 @@ jobs:
         cp android-kernel/out/arch/${{ env.TARGET_ARCH }}/boot/${{ env.KERNEL_FILE }} AnyKernel3/
         if [ ${{ env.CHECK_DTBO_IS_OK }} = true ]; then
             cp android-kernel/out/arch/${{ env.TARGET_ARCH }}/boot/dtbo.img AnyKernel3/
+            cp android-kernel/out/arch/${{ env.TARGET_ARCH }}/boot/dtb AnyKernel3/
         fi
         rm -rf AnyKernel3/.git* AnyKernel3/README.md
 
