--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_sm7250
 KERNEL_SOURCE_BRANCH=13.0
 KERNEL_DEFCONFIG=vendor/picasso_user_defconfig
-KERNEL_FILE=Image.gz-dtb
+KERNEL_FILE=Image
 TARGET_ARCH=arm64
 
 # Clang
