--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-KERNEL_SOURCE=https://github.com/CoolestEnoch/kernel-su-xiaomi-cas/kernel/
-KERNEL_SOURCE_BRANCH=main
-KERNEL_DEFCONFIG=cas_defconfig
+KERNEL_SOURCE=https://github.com/XayahSuSuSu/kernel_xiaomi_cas
+KERNEL_SOURCE_BRANCH=arrow-12.0
+KERNEL_DEFCONFIG=vendor/cas_user_defconfig
 KERNEL_FILE=Image
 TARGET_ARCH=arm64
 
